--- a/home.html
+++ b/home.html
@@ -10,19 +10,28 @@
 
 <body>
     <main>
-        <ul> 
-            <li> <a href= "home.html"> Home </a> </li> 
-            <li> <a href= "hobbies.html"> Hobbies </a> </li>
-            <li style="float:right"><a class="active" href="about.html">About</a></li>
-         </ul>
-         <p> Hello! My name is Fabiha Khanam. I am an aspiring Computer Scientist. I really like front-end development
-            and UX/UI design. I hope to grow my passions more everyday!</p>
-        <center> <img src="https://cdn.theorg.com/860d18f0-0c38-4e10-83c2-f623a9a89a73_medium.jpg"
-                alt=" Photo of me with dark hair and brown eyes"> </center>
+        <header>
+            <nav>
+                <ul>
+                    <li> <a href="home.html"> Home </a> </li>
+                    <li> <a href="hobbies.html"> Hobbies </a> </li>
+                    <li style="float:right"><a class="active" href="about.html">About</a></li>
+                </ul>
+            </nav>
+        </header>
+
+                <p> Hello! My name is Fabiha Khanam. I am an aspiring Computer Scientist. I really like front-end
+                    development
+                    and UX/UI design. I hope to grow my passions more everyday!</p>
+                <center> <img src="https://cdn.theorg.com/860d18f0-0c38-4e10-83c2-f623a9a89a73_medium.jpg"
+                        alt=" Photo of me with dark hair and brown eyes"> </center>
     </main>
+
     <footer>
         <p> Contact me at: Fabihakhanam70@gmail.com </p>
-        </footer>
+        <center> <a href="https://www.linkedin.com/in/fabihakhanam/ " class= "links"> LinkedIn </a> </center>
+           
+    </footer>
 </body>
 
 </html>
