--- a/about.html
+++ b/about.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="styles.css">.
 </head>
 <body>
-    <ul> 
-        <li> <a href= "home.html"> Home </a> </li> 
-        <li> <a href= "hobbies.html"> Hobbies </a> </li>
-        <li style="float:right"><a class="active" href="about.html">About</a></li>
-     </ul>
-     <h2> I am from Bangladesh and a rising high school senior. </h2>
-     <footer>
+    <header>
+        <nav>
+            <ul>
+                <li> <a href="home.html"> Home </a> </li>
+                <li> <a href="hobbies.html"> Hobbies </a> </li>
+                <li style="float:right"><a class="active" href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+  <center> <h2> I am from Bangladesh and a rising high school senior. </h2>
+    <img src=" https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Flag_of_Bangladesh.svg/1200px-Flag_of_Bangladesh.svg.png" width="700" height="600">  </center> 
+
+      <footer>
         <p> Contact me at: Fabihakhanam70@gmail.com </p>
         </footer>
 
