Updated main tag

--- a/about.html
+++ b/about.html
@@ -16,9 +16,11 @@
             </ul>
         </nav>
     </header>
+
+    <main>
   <center> <h2> I am from Bangladesh and a rising high school senior. </h2>
     <img src=" https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Flag_of_Bangladesh.svg/1200px-Flag_of_Bangladesh.svg.png" width="700" height="600">  </center> 
-
+</main> 
       <footer>
         <p> Contact me at: Fabihakhanam70@gmail.com </p>
         </footer>
