--- a/hobbies.html
+++ b/hobbies.html
@@ -18,8 +18,9 @@
             </ul>
         </nav>
     </header>
+    <main>
     <h2> I like to draw, read, and watch new shows! </h2>
-    
+    </main>
     <footer>
         <p> Contact me at: Fabihakhanam70@gmail.com </p>
     </footer>
